# euler

./: .gitignore  README.md
include/: ansi.hpp  dbg.hpp  euler.hpp  libdivide.h  oklch.hpp  test.hpp
include/euler/: Aff.hpp  Algebra.hpp  BinomialModPrimePower.hpp  BinomialTable.hpp  FactorialMod.hpp  FenwickTree.hpp  GI.hpp  PF.hpp  QD.hpp  Quadratic.hpp  SPF.hpp  SegmentTree.hpp  ZMod.hpp  ZModpp.hpp  algorithm.hpp  bernoulli.hpp  cfrac.hpp  concepts.hpp  counting_iterator.hpp  decls.hpp  deprecated.hpp  dirichlet.hpp  find_recurrence.hpp  floors_array.hpp  fwht.hpp  generator.hpp  hash.hpp  io.hpp  it.hpp  literals.hpp  math.hpp  matrix.hpp  memoize.hpp  modular_arithmetic.hpp  prime.hpp  triangular_array.hpp  triangular_vector.hpp  types.hpp  vector2d.hpp  vector3d.hpp
include/euler/it/: base.hpp  combinatorics.hpp  dfinite.hpp  digits.hpp  divisors.hpp  factor.hpp  factorization_shape.hpp  farey_sequence.hpp  fibonacci.hpp  lines.hpp  powerful_numbers.hpp  primes.hpp  product_partitions.hpp  pythagorean_triples.hpp  smooth_numbers.hpp  split.hpp  tree.hpp  unfold.hpp
test/: CMakeLists.txt  GI.cpp  PF.cpp  QD.cpp  basic.cpp  common.hpp  crt.cpp  dirichlet.cpp  find_period.cpp  find_recurrence.cpp  floor_div.cpp  floors_array.cpp  it.cpp  partial_sum.cpp  performance.cpp  quadratic.cpp  segment_tree.cpp  totient_sieve.cpp  zmod.cpp
